--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,7 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Ticket</string>
-    <string name="new_ticket">Nouveau ticket</string>
+    <string name="app_name">Lecteur de Ticket</string>
     <string name="history">Historique</string>
+    <string name="new_ticket">Nouveau ticket</string>
     <string name="settings">Paramètres</string>
     <string name="takePicture">Prendre une photo</string>
 </resources>
