--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -11,4 +11,13 @@
     <string name="ticketAdded">Ticket ajouté !</string>
     <string name="commentaryHint">Commentaires</string>
     <string name="autre">Autre</string>
+    <string name="credit">Crédits</string>
+    <string name="credit_content" translatable="false">Fait par :</string>
+    <string name="avecAide">Avec l\'aide de :</string>
+    <string name="titleMainScreen">Nouveau ticket</string>
+    <string name="magasinGroupTitle">Type de ticket</string>
+    <plurals name="products">
+        <item quantity="one">%s produit</item>
+        <item quantity="other">%s produits</item>
+    </plurals>
 </resources>
