--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,4 +22,5 @@
         <item quantity="other">%s products</item>
     </plurals>
     <string name="statsTitle">Statistics</string>
+    <string name="ticketSaved">Edition saved</string>
 </resources>
